# corewar

./: .1.h.swp  1.h  CMakeLists.txt  Makefile  README.md  asm.c  asm.h  champ_exec_code.c  main.c  op.c  op.h  print_file.c  sample_t_struct.c  test.cor  to_bytecode.c
includes/: asm.h  op.h
libft/: ft_itoa_base.c
libft/ft_printf/ft_printf/: Makefile
libft/ft_printf/ft_printf/includes/: header_pf.h
libft/ft_printf/ft_printf/src/: libfunctions.c
other/: op.c  print_file.c  sample_t_struct.c  test.s
src/: asm.c  champ_exec_code.c  checks.c  labels.c  op.c  to_bytecode.c
vm_champs_macos/: test
vm_champs_macos/champs/: 42.cor  42.s  toto.cor  toto.s
