cmake_minimum_required(VERSION 3.15)
project(corewar C)
include_directories(./libft)
include_directories(./includes)
set(CMAKE_C_STANDARD 99)
set(SOURCE_FILES src/to_bytecode.c src/asm.c src/labels.c src/checks.c src/op.c src/champ_exec_code.c)
set(INCLUDE_FILES includes/op.h includes/asm.h)
add_executable(corewar ${SOURCE_FILES} ${INCLUDE_FILES})
target_link_libraries(corewar /Users/gtristan/CLionProjects/corewar/libft/libft.a)
